fix: container-padding-x variable not working on mobile

--- a/app/styles/_variables.scss
+++ b/app/styles/_variables.scss
@@ -30,6 +30,6 @@
     --transition-duration: 0.2s;
 
     @include mobile {
-        --container-padding-x: rem(10);    
+        --container-padding-x: #{rem(10)};    
     }
 }
